Added comments to styles and scripts.

--- a/backend/packages/main-ui/main.css
+++ b/backend/packages/main-ui/main.css
@@ -1,3 +1,6 @@
+/**
+ * Style definitions relevant for backend
+ */
 body {
     padding-top: 40px; /* compensate for the fixed top navbar */
     position: relative;
